cluster/idp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idp
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  annotations:
    linkerd.io/inject: enabled
